# ESP-String-Relay

./: .gitignore  Cargo.toml
Micro/ESP32/: ESP32.ino
python/: test_server.py
src/: main.rs
