[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.20.0"
socket2 = "0.4.4"
json = "0.12.4"
mongodb = {version="2.2.2", features=["bson-chrono-0_4"]}
futures = "0.3.21"
chrono = "0.4"
serde = "1.0.140"
dotenv = "0.15.0"
